--- a/public/sass/pages/_game.scss
+++ b/public/sass/pages/_game.scss
@@ -47,8 +47,16 @@
 		margin-top: 5%;
 		text-align: center;
 		font-family: raleway;
+			&__row{
+				display: flex;
+				flex-direction: row;
+				flex-wrap: wrap;
+				justify-content: space-around;
+				align-items: center;
+			}
 			&__container{
 				display: flex;
+				flex-direction: column;
 				justify-content: space-around;
 				align-items: center;
 				margin: 5%;
@@ -61,7 +69,8 @@
 			}
 			&__h1{
 				color: #FFCD05;	
-				font-size: 20px;	
+				font-size: 20px;
+				margin-top: 25px;	
 			}
 
 			&__img{
