--- a/public/sass/pages/_game.scss
+++ b/public/sass/pages/_game.scss
@@ -1,17 +1,3 @@
-.close{
-	color: var(--color-yellow-1);
-	// &:active{
-	// 	background-color: var(--color-yellow-1);
-	// }
-	&:hover{
-		color: var(--color-yellow-1);
-	}
-	&:focus{
-		color: var(--color-yellow-1);
-		outline: none;
-	}
-}
-
 .game{
 	background-color: var(--color-grey-5);
 
@@ -191,10 +177,17 @@
 }
 
 
-@media (min-width: 275px ) and (max-width:500px ) {
+@media (min-width: 275px )  {
   .game__slotItems{
 		padding: 15px;
 		width: 310px;
+  }
+}
+
+@media (min-width: 350px ) and (max-width:500px ) {
+  .game__slotItems{
+		padding: 15px;
+		width: 90%;
   }
 }
 
@@ -332,6 +325,14 @@
     .gameModal__icon {
         width: 150px;
         height: 150px
+	}
+	.gameModal__Container__text {
+        margin: 2.5%;
+        text-align: center;
+        font-family: raleway;
+        font-size: 20px;
+        font-weight: 500;
+        line-height: 16px
     }
 }
 
@@ -339,11 +340,8 @@
     .gameModal__icon {
         width: 200px;
     	height: 200px
-    }
-}
-
-@media (min-width: 767px) and (max-width: 1280px) {
-    .gameModal__Container__text {
+	}
+	.gameModal__Container__text {
 		margin: 2.5%;
 		text-align: center;
 		font-family: raleway;
@@ -353,13 +351,14 @@
     }
 }
 
-@media (min-width: 200px) and (max-width: 766px) {
-    .gameModal__Container__text {
-        margin: 2.5%;
-        text-align: center;
-        font-family: raleway;
-        font-size: 20px;
-        font-weight: 500;
-        line-height: 16px
-    }
+
+.close{
+	color: var(--color-yellow-1);
+	&:hover{
+		color: var(--color-yellow-1);
+	}
+	&:focus{
+		color: var(--color-yellow-1);
+		outline: none;
+	}
 }
