Move all folder from public to src including sass, css, js and font

--- a/public/sass/pages/_login.scss
+++ b/public/sass/pages/_login.scss
@@ -1,4 +1,6 @@
 .Login {
+  display: flex;
+  justify-content: center;
   background-color: var(--color-grey-5);
   color: var(--color-yellow-1);
   text-align: center;
