--- a/public/css/style.css
+++ b/public/css/style.css
@@ -345,6 +345,8 @@ ul {
     margin: 1rem; }
 
 .Login {
+  display: flex;
+  justify-content: center;
   background-color: var(--color-grey-5);
   color: var(--color-yellow-1);
   text-align: center;
@@ -590,6 +592,8 @@ ul {
   .TabsPane1:hover {
     color: black;
     background-color: white; }
+  .TabsPane1__text {
+    text-align: center; }
   .TabsPane1__label {
     font-family: Raleway;
     font-size: 36px;
