--- a/src/style/sass/pages/_game.scss
+++ b/src/style/sass/pages/_game.scss
@@ -267,7 +267,7 @@
 
 
 .boxaladin {
-	background-image: url("https://steemit-production-imageproxy-thumbnail.s3.amazonaws.com/U5du7QzV9m547GdgFGVuh2ckhRKGL9Q_1680x8400");
+	background-image: url('../../asset/Logo/LogoSmall.svg');
 	width: 80%;
 	height: 100px;	
 	border-radius: 10px;
@@ -275,7 +275,7 @@
 	margin-bottom: 3px;
 	margin-left: 5px;
 	margin-right: 5px;
-	background-color: white;
+	background-color: black;
 	background-size: 100% 100%;
 }
 
