change language to indonesia

--- a/src/style/sass/pages/_game.scss
+++ b/src/style/sass/pages/_game.scss
@@ -45,7 +45,7 @@
 				flex-direction: column;
 				justify-content: space-around;
 				align-items: center;
-				margin: 5%;
+				margin: 3%;
 			}
 			&__title{
 				color: #FFCD05;	
@@ -110,9 +110,9 @@
 		display: flex;
 		justify-content: center;
 		align-items: center;
-		padding: 25px;
+		margin-bottom: 10px;
 		&__icon{
-			width: 10%;
+			width: 15%;
 			margin: 10px;
 		}
 
