--- a/src/style/sass/pages/_invoice.scss
+++ b/src/style/sass/pages/_invoice.scss
@@ -10,5 +10,13 @@
     &__text{
         text-align: center;
         margin-bottom: 20px;
+        font-size: 30px;
     }
+}
+
+tr{
+    font-size: 20px;
+}
+td{
+    font-size: 15px;
 }
