--- a/src/style/sass/pages/_topupkey.scss
+++ b/src/style/sass/pages/_topupkey.scss
@@ -3,10 +3,15 @@
     padding-left: 20%;
     padding-right: 20%;
     background-color: var(--color-grey-5);
-  
     &__text{
       text-align: center;
       color: var(--color-yellow-1);
+    }
+
+    &__dropdown{
+      font-size: 14px;
+      height: 100% !important;
+
     }
   }
   
