add reset state for coin conver message

--- a/src/style/sass/reusable/_components.scss
+++ b/src/style/sass/reusable/_components.scss
@@ -117,7 +117,7 @@
     color: var(--color-yellow-1);
   }
 }
-input:-webkit-autofill {
+.form-group.Login__Form input:-webkit-autofill {
   -webkit-text-fill-color: var(--color-yellow-1) ;
   -webkit-box-shadow: 0 0 0 34px #3E3E3E inset !important;
 }
