--- a/src/style/sass/reusable/_components.scss
+++ b/src/style/sass/reusable/_components.scss
@@ -122,6 +122,11 @@
   -webkit-box-shadow: 0 0 0 34px #3E3E3E inset !important;
 }
 
+.form-group.Signup__Form input:-webkit-autofill {
+  -webkit-text-fill-color: var(--color-yellow-1) ;
+  -webkit-box-shadow: 0 0 0 34px #3E3E3E inset !important;
+}
+
 .alert{
   color: #ff2323;
   &__dompetAladin{
