--- a/src/style/sass/pages/_home.scss
+++ b/src/style/sass/pages/_home.scss
@@ -1,9 +1,39 @@
  //for page home component carousel
+// .carousel{
+//   &__container{
+//   width: 100%;
+//   }
+//   &__content{
+
+//   }
+// }
+//////////////////////////////////
 .carouselHome{
   width: 100%;
-  height: 25rem;
+  display: table;
 }
-//////////////////////////////////
+.carousel{
+  &__container{
+    width: 100%;
+  }
+  &__content{
+    height: 10px;
+  }
+  &__wrapper{
+    height: 450px;
+    overflow: hidden;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+}
+@media (max-width:800px ) {
+  .carousel__wrapper{
+    height: 100%;
+  }
+}
+
+
 
 //for page home component TabsHome
 .NavTabsHome{
