--- a/src/style/sass/reusable/_base.scss
+++ b/src/style/sass/reusable/_base.scss
@@ -30,7 +30,7 @@ body {
     min-height: 100vh;
     
 }
-body.modal-open { overflow:inherit; padding-right:inherit !important; }
+body.modal-open { position: fixed; width: 100%; }
 
 
 ////////////////////////////////////////
