add page for customer service, (bagian modal login jgan di merge, pake yg lama aja)

--- a/src/style/sass/main.scss
+++ b/src/style/sass/main.scss
@@ -20,6 +20,7 @@
 @import "pages/emailVerification";
 @import "pages/resetPassword";
 @import "pages/invoice";
+@import "pages/layanan";
 
 // reuseable components
 @import "reusable/base";
