--- a/src/style/sass/reusable/_base.scss
+++ b/src/style/sass/reusable/_base.scss
@@ -30,7 +30,7 @@ body {
     min-height: 100vh;
     
 }
-body.modal-open { overflow:inherit; padding-right:inherit !important; }
+body.modal-open { overflow:inherit; padding-right:inherit !important; position: fixed}
 
 
 ////////////////////////////////////////
@@ -44,3 +44,4 @@ body.modal-open { overflow:inherit; padding-right:inherit !important; }
 .col-sm-6{
   padding-right: 0;
 }
+
