--- a/src/style/sass/reusable/_components.scss
+++ b/src/style/sass/reusable/_components.scss
@@ -52,26 +52,72 @@
   }
 }
 
-.Modalz{
-  border-radius: 0;
-  position: fixed;
-  top: 15%;
-  left: 20%;
+.modalz{
+  position: fixed; /* Stay in place */
+  z-index: 10; /* Sit on top */
+  left: 0;
+  top: 0;
+  padding-top: 100px;
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+  background-color: rgb(0,0,0); /* Fallback color */
+  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+}
+
+//---------------------
+
+/* Modal Content */
+.modal-content {
+  position: relative;
+  margin: auto;
+  padding: 0;
   width: 60%;
-  z-index: 10;
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19);
+  -webkit-animation-name: animatetop;
+  -webkit-animation-duration: 0.4s;
+  animation-name: animatetop;
+  animation-duration: 0.4s;
+  overflow: auto; /* Enable scroll if needed */
   border: 5px solid var(--white);
 }
 
+/* Add Animation */
+@-webkit-keyframes animatetop {
+  from {top:-300px; opacity:0} 
+  to {top:0; opacity:1}
+}
+
+@keyframes animatetop {
+  from {top:-300px; opacity:0}
+  to {top:0; opacity:1}
+}
+
+/* The Close Button */
+.close {
+  font-size: 28px;
+  font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+  text-decoration: none;
+  cursor: pointer;
+}
+
+.modal-body {padding: 0;}
+
+//----------------------
+
 @media (min-width: 767px ) {
-  .Modalz{
+  .modal-content{
     font-size: 14px;
-    max-width: 730px;
   }
 }
 @media (min-width: 200px ) and (max-width:766px ) {
-  .Modalz{
+  .modal-content{
     font-size: 14px;
-    max-width: 600px;
+    width: 80%
   }
 }
 
