--- a/src/style/sass/components/_footer.scss
+++ b/src/style/sass/components/_footer.scss
@@ -136,9 +136,15 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: center;
+    text-Align: center;
     height: 70px;
     background-color: var(--color-yellow-1);
+    padding: 20px;
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    height: 60px;
+    width: 100%;
     &__labelTop{
       color: #3E3E3E;
       font-family: Raleway;
@@ -199,4 +205,8 @@
 
 ul {
   list-style-type: none;
+}
+
+.footerContainer{
+  padding: 20px;
 }
