--- a/src/style/sass/pages/_pembayaran.scss
+++ b/src/style/sass/pages/_pembayaran.scss
@@ -1,9 +1,6 @@
 .pembayaran{
   width: 100%;
-  padding-left: 25%;
-  padding-right: 25%;
-  padding-top: 5%;
-  padding-bottom: 5%;
+  padding: 5%;
   background-color: var(--color-grey-8);
 
   &__container{
@@ -31,9 +28,6 @@
 
 .bankz{
   display: flex;
-  flex-direction: row;
-  justify-content: start;
-  align-items: center;
 
   &__icon{
     width: 125px;
@@ -46,5 +40,12 @@
     font-size: 24px;	
     font-weight: 900;	
     line-height: 56px;
+  }
+}
+
+@media (max-width: 500px)  {
+  .bankz{
+    display: block;
+    text-align: center
   }
 }
