--- a/src/style/sass/reusable/_components.scss
+++ b/src/style/sass/reusable/_components.scss
@@ -62,7 +62,7 @@
   height: 100%; /* Full height */
   overflow: auto; /* Enable scroll if needed */
   background-color: rgb(0,0,0); /* Fallback color */
-  background-color: rgba(0,0,0,0.4); /* Black w/ opacity *
+  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
 }
 
 //---------------------
@@ -203,4 +203,3 @@
     justify-content: center;
   }
 }
-
