change game prize

--- a/src/style/sass/pages/_home.scss
+++ b/src/style/sass/pages/_home.scss
@@ -186,7 +186,7 @@
       &__item{
         width: 100%;
         text-align: center;
-
+        top : -1px !important;
         margin: 0rem;
         padding: 0.5rem;
 
