--- a/src/style/sass/pages/_layanan.scss
+++ b/src/style/sass/pages/_layanan.scss
@@ -4,6 +4,7 @@
   &__container{
     min-height: 30rem;
     padding: 2.5%;
+    padding-bottom: 40px;
     padding-left: 15%;
     padding-right: 15%;
   }
