--- a/src/style/sass/reusable/_components.scss
+++ b/src/style/sass/reusable/_components.scss
@@ -39,7 +39,7 @@
 @media (min-width: 296px ) and (max-width:767px) {
   .DropdownUser__item{
     top: 180px !important;
-    // transform: translate3d(0px, -130px, 0px) !important;
+    transform: translate3d(0px, -130px, 0px) !important;
   }
 }
 
