--- a/src/style/sass/pages/_game.scss
+++ b/src/style/sass/pages/_game.scss
@@ -39,6 +39,7 @@
 				flex-wrap: wrap;
 				justify-content: space-around;
 				align-items: center;
+				margin-bottom: 30px;
 			}
 			&__container{
 				display: flex;
