--- a/src/style/sass/pages/_pembayaran.scss
+++ b/src/style/sass/pages/_pembayaran.scss
@@ -9,6 +9,10 @@
     width: 100%;
     background-color: var(--color-white);
     padding: 10px;
+
+    a.nav-link {
+      padding: 1rem 9.565rem;
+    }
   }
 
   &__title{
@@ -36,9 +40,9 @@
     margin-left: 5%;
   }
 
-  &__name{	
-    font-size: 24px;	
-    font-weight: 900;	
+  &__name{
+    font-size: 24px;
+    font-weight: 900;
     line-height: 56px;
   }
 }
