--- a/src/style/sass/pages/_user.scss
+++ b/src/style/sass/pages/_user.scss
@@ -1,5 +1,5 @@
 .User{
-    background-color: var(--color-grey-5); 
+    background-color: var(--color-grey-5);
     &__container{
         margin: auto;
         width: 100%;
@@ -9,11 +9,11 @@
         padding: 5%;
         padding-top: 0%;
     }
-    
+
 
     &__Label{
         display: flex;
-        justify-content: center;    
+        justify-content: center;
         font-size: 25px;
         color: var(--color-yellow-1);
         padding: 2.5%;
@@ -36,6 +36,17 @@
 
         &__row1{
             width: 100%;
+
+            &__PhoneNumber{
+              display: flex;
+              padding-top: 10px;
+            }
+
+            &__PhoneInfo{
+              display: flex;
+              justify-content: space-between;
+              width: 100%
+            }
         }
 
         &__row2{
@@ -163,4 +174,3 @@
         font-size: 15px;
     }
 }
-
