--- a/src/style/sass/main.scss
+++ b/src/style/sass/main.scss
@@ -1,6 +1,7 @@
 //components
 @import "components/footer";
 @import "components/header";
+@import "components/modal";
 
 //pages
 @import "pages/signup";
