fix userinfo phone

--- a/src/style/sass/pages/_user.scss
+++ b/src/style/sass/pages/_user.scss
@@ -47,6 +47,10 @@
               justify-content: space-between;
               width: 100%
             }
+
+            &__PhoneWidth{
+              width: 100%
+            }
         }
 
         &__row2{
