--- a/src/style/sass/components/_modal.scss
+++ b/src/style/sass/components/_modal.scss
@@ -144,6 +144,7 @@
       font-size: 14px;
       margin-top: 10px;
       margin-bottom: 10px;
+      text-align: center;
     }
     &__button{
       font-size: 14px;
