--- a/src/style/sass/components/_header.scss
+++ b/src/style/sass/components/_header.scss
@@ -1,7 +1,7 @@
 //Header
 .HeaderTop {
-    background-color: #3E3E3E;
-    border-bottom: 4px solid #FFCD05;
+    background-color: white;
+    border-bottom: 4px solid white;
 
     &__Right{
       display: flex;
@@ -22,7 +22,7 @@
 .HeaderTopM {
     background-color: #3E3E3E;
     border-bottom: 4px solid #FFCD05;
-    
+
     &__logo{
       margin: 0px auto;
       padding-right: 5%;
@@ -57,7 +57,7 @@
 }
 
 .header-margin{
-  margin-right: 15px;
+  margin-right: 50px;
 }
 
 @media (max-width: 767px)  {
@@ -71,9 +71,9 @@
   cursor:inherit;
   height: 40px;
   width: 200px;
-  border: 2px solid #FFCD05;
-  color: #FFCD05;
-  background-color: #3E3E3E;
+  border: 2px solid yellow;
+  color: black;
+  background-color: white;
   box-shadow: inset 0 1px 3px 0 rgba(0,0,0,0.5);
   font-family: Raleway;
   font-size: 22px;
@@ -81,10 +81,13 @@
   line-height: 20px;
   text-align: center;
   margin-right: 20px;
+  -webkit-box-shadow: none;
+          box-shadow: none;
+  border-width: 3px;
 
   &:hover{
     color: #FFCD05;
-    background-color: #3E3E3E;
+    background-color: white;
   }
 
   &__label{
@@ -98,7 +101,7 @@
       cursor:inherit;
       margin: 0rem;
     }
-    
+
   }
 
 }
@@ -118,13 +121,16 @@
   height: 44px;
   padding: 0;
   border-radius: 10px;
-  background-color: var(--color-yellow-1);
+  background-color: white;
+  border-color: yellow;
+  border-style: solid;
+  border-width: 3px;
   &:active{
-    background-color: var(--color-yellow-1) !important;
-    border-color: transparent;
+    background-color: white !important;
+    border-color: yellow;
   }
   &:hover{
-    background-color: var(--color-yellow-1);
+    background-color: white;
   }
   // &:focus{
   //   box-shadow: transparent !important;
@@ -147,17 +153,16 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: var(--color-yellow-1);
+    background-color: white;
     color: var(--color-grey-5);
     font-family: Raleway;
     font-size: 22px;
     font-weight: 600;
     line-height: 11px;
     text-align: center;
-    border-right: 2px solid var(--color-grey-5);
     margin: 0rem;
     padding: 0rem;
-    margin-left: 10px;
+    margin-left: 30px;
     padding-right: 10px;
   }
 
@@ -249,4 +254,3 @@
 //     height: 0px;
 //   }
 // }
-
