--- a/src/style/sass/components/_header.scss
+++ b/src/style/sass/components/_header.scss
@@ -10,6 +10,8 @@
       align-items: center;
       margin: 0rem;
       padding: 0rem;
+      width: 35%;
+      justify-content: space-around
     }
 }
 
