finish styling homepage

--- a/src/style/sass/reusable/_base.scss
+++ b/src/style/sass/reusable/_base.scss
@@ -25,8 +25,8 @@ body {
     font-family: 'Raleway', Raleway;
     font-weight: 400;
     line-height: 1.6;
-    color: var(--color-grey-dark-2);
-    background-color: #3E3E3E;
+    color: black;
+    background-color: white;
     min-height: 100vh;
     
 }
