--- a/src/style/sass/pages/_home.scss
+++ b/src/style/sass/pages/_home.scss
@@ -1,304 +1,311 @@
- //for page home component carousel
-// .carousel{
-//   &__container{
-//   width: 100%;
-//   }
-//   &__content{
-
-//   }
-// }
-//////////////////////////////////
-.carouselHome{
-  width: 100%;
-  display: table;
-}
-// .carousel{
-//   &__container{
-//     width: 100%;
-//   }
-//   &__content{
-//     height: 10px;
-//   }
-//   &__wrapper{
-//     height: 450px;
-//     overflow: hidden;
-//     display: flex;
-//     justify-content: center;
-//     align-items: center;
-//   }
-// }
-// @media (max-width:800px ) {
-//   .carousel__wrapper{
-//     height: 100%;
-//   }
+// //for page home component TabsHome
+// .NavTabsHome{
+//   background-color: var(--color-dark-3);
+//   color: var(--color-yellow-1);
+//   font-size: 20px;
+//   cursor: default;
 // }
 
+// .TabsHome{
+//   width: 50%;
+//   // height: 5rem ; ntar diurusin
+//   margin: 0;
+//   font-family: Raleway;
+//   font-weight: 900;
+//   letter-spacing: 1px;
+//   line-height: 11px;
+//   text-align: center;
+//   border: 1px solid #979797 ;
+
+//     &:hover{
+//       color: black ;
+//       background-color: var(--color-yellow-1);
+//       border: 1px solid #979797 ;
+//     }
+
+//   &__icon1{
+//     height: 40px;
+//     width: 20px;
+//     &:hover{
+//       color: var(--color-yellow-1);
+//       background-color: var(--color-yellow-1);
+//     }
+//   }
+// }
+
+// // for component TabsPane1 at TabsHome
+//   .TabsPane1{
+//     margin: 0rem;
+//     background-color: white;
+
+//     &__text{
+//       text-align: center ;
+//     }
+
+//     &__label{
+//       font-family: Raleway;
+//       font-size: 36px;
+//       font-weight: 800;
+//       letter-spacing: 1px;
+//       line-height: 42px;
+//       margin: 1%;
+//     }
+
+//     &__dropdown{
+//       display: flex;
+//       flex-wrap: wrap;
+//       justify-content: space-around;
+//       flex-wrap: wrap;
+//       padding: 1rem;
+//     }
+
+//     &__selectedProduct{
+//       margin-bottom: 0;
+//       text-align: center;
+//       padding: 20px;
+//       color: var(--color-grey-5);
+//       background-color: white;
+//     }
+
+//     &__button{
+//       color: var(--color-yellow-1);
+//       background-color: var(--color-grey-5);
+
+//       width: 100%;
+//       padding: 20px;
+//       font-family: Raleway;
+//       font-size: 24px;
+//       font-weight: 800;
+//       letter-spacing: 1px;
+//       text-align: center;
+//       margin: 0rem;
+//     }
+//   }
+
+// // for component dropdown at TabsPane1
+//     .dropz{
+//       width: 17rem;
+//       height: 5rem;
+//       padding: 0rem;
+//       border: 3px solid #3E3E3E;
+//       margin-bottom: 5%;
+//       &__devide{
+//         width: 100%;
+//         height: 100%;
+//         margin: 0rem;
+//         padding: 0rem;
+//         border: none;
+
+//         display: flex;
+
+//       }
+
+//       &__big{
+//         display: flex;
+//         justify-content: center;
+//         align-items: center;
+
+//         background-color: var(--white);
+
+//         width: 75%;
+//         height: 100%;
+
+//         margin: 0rem;
+//         padding: 0rem;
+
+//       }
+
+//       &__small{
+//         display: flex;
+//         justify-content: center;
+//         align-items: center;
+
+//         background-color: var(--color-grey-5);
+
+//         width: 25%;
+//         height: 100%;
+//         justify-content: center;
+
+//         margin: 0rem;
+//         padding: 0rem;
+
+//       }
+
+//       &:hover{
+//         color: black ;
+//         background-color: var(--color-primary-2);
+//       }
+
+//       &__img{
+//         width: 6rem;
+//         height: 3rem;
+//       }
+
+//       &__icon{
+//         width: 1rem;
+//         height: 1rem;
+//       }
+
+//       &__item{
+//         width: 100%;
+//         text-align: center;
+//         top : -1px !important;
+//         margin: 0rem;
+//         padding: 0.5rem;
+
+//         background-color: var(--color-grey-5);
 
 
-//for page home component TabsHome
-.NavTabsHome{
-  background-color: var(--color-dark-3);
-  color: var(--color-yellow-1);
-  font-size: 20px;
-  cursor: default;
-}
+//         &__inside{
+//           padding: 0.5rem;
+//           color: var(--color-yellow-1);
 
-.TabsHome{
-  width: 50%;
-  // height: 5rem ; ntar diurusin
-  margin: 0;
-  font-family: Raleway;
-  font-weight: 900;
-  letter-spacing: 1px;
-  line-height: 11px;
-  text-align: center;
-  border: 1px solid #979797 ;
+//           &:hover{
+//             background-color: var(--color-yellow-1);
+//             color: var(--color-grey-5);
+//           }
+//         }
 
-    &:hover{
-      color: black ;
-      background-color: var(--color-yellow-1);
-      border: 1px solid #979797 ;
-    }
+//       }
 
-  &__icon1{
-    height: 40px;
-    width: 20px;
-    &:hover{
-      color: var(--color-yellow-1);
-      background-color: var(--color-yellow-1);
-    }
-  }
-}
+//     }
 
-// for component TabsPane1 at TabsHome
-  .TabsPane1{
-    margin: 0rem;
+
+.homecontent{
+  &__container{
     background-color: white;
-
+  }
+  &__top{
+    background-color: var(--color-yellow-1);
+    display: flex;
+    padding-bottom: 4%;
     &__text{
-      text-align: center ;
-    }
-
-    &__label{
-      font-family: Raleway;
-      font-size: 36px;
-      font-weight: 800;
-      letter-spacing: 1px;
-      line-height: 42px;
-      margin: 1%;
-    }
-
-    &__dropdown{
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: space-around;
-      flex-wrap: wrap;
-      padding: 1rem;
-    }
-
-    &__selectedProduct{
-      margin-bottom: 0;
-      text-align: center;
-      padding: 20px;
-      color: var(--color-grey-5);
-      background-color: white;
-    }
-
-    &__button{
-      color: var(--color-yellow-1);
-      background-color: var(--color-grey-5);
-
-      width: 100%;
-      padding: 20px;
-      font-family: Raleway;
-      font-size: 24px;
-      font-weight: 800;
-      letter-spacing: 1px;
-      text-align: center;
-      margin: 0rem;
-    }
-  }
-
-// for component dropdown at TabsPane1
-    .dropz{
-      width: 17rem;
-      height: 5rem;
-      padding: 0rem;
-      border: 3px solid #3E3E3E;
-      margin-bottom: 5%;
-      &__devide{
-        width: 100%;
-        height: 100%;
-        margin: 0rem;
-        padding: 0rem;
-        border: none;
-
+      padding-top: 2%;
+      padding-left: 5%;
+      margin-bottom: 20px;
+      &__top{
+        font-size: 35px;
+      }
+      &__bot{
+        font-size: 25px;
+      }
+      &__remember{
         display: flex;
+        flex-direction: column;
+        font-size: 35px;
+        padding-left: 5%;
+        &__top{
 
-      }
-
-      &__big{
-        display: flex;
-        justify-content: center;
-        align-items: center;
-
-        background-color: var(--white);
-
-        width: 75%;
-        height: 100%;
-
-        margin: 0rem;
-        padding: 0rem;
-
-      }
-
-      &__small{
-        display: flex;
-        justify-content: center;
-        align-items: center;
-
-        background-color: var(--color-grey-5);
-
-        width: 25%;
-        height: 100%;
-        justify-content: center;
-
-        margin: 0rem;
-        padding: 0rem;
-
-      }
-
-      &:hover{
-        color: black ;
-        background-color: var(--color-primary-2);
-      }
-
-      &__img{
-        width: 6rem;
-        height: 3rem;
-      }
-
-      &__icon{
-        width: 1rem;
-        height: 1rem;
-      }
-
-      &__item{
-        width: 100%;
-        text-align: center;
-        top : -1px !important;
-        margin: 0rem;
-        padding: 0.5rem;
-
-        background-color: var(--color-grey-5);
-
-
-        &__inside{
-          padding: 0.5rem;
-          color: var(--color-yellow-1);
-
-          &:hover{
-            background-color: var(--color-yellow-1);
-            color: var(--color-grey-5);
-          }
         }
+        &__bot{
 
+        }
       }
-
     }
-
-//////////////////////////////////
-
-// for page home component banner text kok bisa lebih murah
-.BannerText1{
-  border-top: 0.25rem solid var(--color-yellow-1);
-  width: 100%;
-  background-color: var(--color-grey-7);
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  text-align: center;
-  padding-bottom: 20px;
-
-  &__text1{
-    font-size: 4rem;
-    padding: 1rem;
-    margin: 0;
-    color: var(--color-yellow-1);
-    text-align: center;
+    &__youtube{
+      width: 100%;
+      background-color: white;
+      margin-right: 4%;
+      margin-top: 4%;
+      margin-bottom: 2%;
+    }
   }
-  &__text2{
-    padding: 2rem;
-    margin: 0;
-    font-size: 2rem;
-    color: var(--color-grey-6);
+
+  &__bottom{
+    &__pulsa{
+      display: flex;
+      justify-content: space-evenly;
+      font-size: 50px;
+      margin-bottom: 5%;
+      margin-top: -4%;
+      &__button{
+        width: 200px;
+        height: 200px;
+        border-radius: 10px;
+        background-color: white;
+        &:focus{
+          outline: none;
+        }
+        &__image{
+          width: 75%;
+        }
+      }
+    }
+    &__check{
+      text-align: right;
+      &__button{
+        font-size: 20px;
+        padding-left: 10px;
+        padding-right: 10px;
+        border-radius: 10px;
+      }
+    }
   }
 }
 
 // for page home component banner text FAQ
-.BannerText2{
-  width: 100%;
-  margin: 0;
-  background-color: var(--color-grey-6);
-  color: var(--color-grey-dark-1);
-  text-align: center;
-  padding-bottom: 20px;
-
-  &__text1{
-    font-size: 4rem;
-    padding: 1rem;
-    margin: 0;
+.BannerText{
+  &__body{
+    width: 100%;
+    background-color: white;
+    color: black;
+    text-align: center;
+    border-top: solid 1px;
+    margin-top: 30px;
   }
-  &__text2{
-    font-size: 2rem;
-    padding: 2rem;
-    padding-left: 10%;
-    padding-right: 10%;
-    margin: 0;
-    text-align: left;
+  &__header{
+    display: flex;
+    justify-content: center;
+    &__title{
+      margin-top: -20px;
+      background-color: white;
+      border: solid 1px var(--color-yellow-1);
+      border-radius: 10px;
+      width: 20%;
+    }
   }
-  &__list{
-    margin-bottom: 4px;
-  }
-}
-
-.BannerText3{
-  width: 100%;
-  margin: 0;
-  background-color: var(--color-grey-7);
-  text-align: center;
-  padding-bottom: 20px;
-
-  &__text1{
-    font-size: 4rem;
-    padding: 1rem;
-    margin: 0;
-    color: var(--color-yellow-1);
-  }
-  &__Q{
-    font-size: 2rem;
-    padding-left: 10%;
-    padding-right: 10%;
-    margin: 0;
-    text-align: left;
-    color: var(--color-grey-6);
-  }
-  &__A{
-    font-size: 2rem;
-    padding-left: 10%;
-    padding-right: 10%;
-    text-align: left;
-    color: var(--color-grey-6);
-    margin-bottom: 10px;
-  }
-}
-
-ul{
-  list-style-type:none;
+  &__icon{
+    &__left{
+      display: flex;
+      margin-right: 15px;
+    }
+    &__right{
+      display: flex;
+      margin-left: 15px;
+    }
+    &__register{
+      width: 60px;
+    }
+    &__footer{
+      display: flex;
+      justify-content: center;
+    }
   }
 
-.rowz {
-  margin: 0;
+  &__content{
+    margin-top: 20px;
+    display: flex;
+    padding-left: 15%;
+    padding-right: 15%;
+    &__title{
+      font-weight: 700;
+      font-size: 25px;
+      text-align: left;
+      margin-left: 10px;
+    }
+    &__paragraph{
+      font-size: 20px;
+      text-align: left;
+      margin-left: 10px;
+    }
+
+    &__footer{
+      padding-bottom: 2%;
+      font-size: 35px;
+
+    }
+  }
+
 }
 
 @media (min-width: 200px ) and (max-width:767px ) {
@@ -307,5 +314,18 @@ ul{
   }
   .TabsPane1__label{
       padding: 5%;
+  }
+}
+
+@media (min-width: 100px ) and (max-width:396px ) {
+  .BannerText__content{
+    margin-top: 20px;
+  }
+  .BannerText__icon{
+    margin: 0;
+      &__register{
+        width: 0;
+        height: 0;
+    }
   }
 }
