--- a/src/style/sass/pages/_login.scss
+++ b/src/style/sass/pages/_login.scss
@@ -1,8 +1,8 @@
 .Login {
   display: flex;
   justify-content: center;
-  background-color: var(--color-grey-5);
-  color: var(--color-yellow-1);
+  background-color: var(--color-white);
+  color: var(--color-black-1);
   text-align: center;
   padding: 5%;
 
@@ -34,28 +34,25 @@
   }
 
   &__ButtonLogin{
-    color: var(--color-grey-5);
+    color: var(--color-black-5);
     background-color: var(--color-yellow-1);
     border-color: var(--color-yellow-1);
-    width: 100px;
-    height: 25px;
+    width: 100%;
     font-family: Raleway;
-    font-size: 14px;
+    font-size: 20px;
     font-weight: bold;
-    line-height: 16px;
     text-align: center;
-    margin: 1rem;
     &:active{
       background-color: var(--color-yellow-1) !important;
-      color: var(--color-dark-3);
+      color: var(--color-black-3);
     }
     &:hover{
       background-color: var(--color-yellow-1);
-      color: var(--color-dark-3);
+      color: var(--color-black-3);
     }
     &:focus{
       background-color: var(--color-yellow-1);
-      color: var(--color-dark-3);
+      color: var(--color-black-3);
     }
   }
 
@@ -78,4 +75,26 @@
 
   }
 
+}
+
+.labelFont{
+  font-size: 13px;
+}
+
+.footerModal{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  background-color: lightgrey;
+  border-top: 1px;
+  border-top-style: solid;
+  height: 50px;
+  align-items: center
+}
+
+.borderFloat{
+  border: 2px;
+  border-right-style: solid;
+  border-width: 2px;
+  width: 38%;
 }
