--- a/src/style/sass/pages/_login.scss
+++ b/src/style/sass/pages/_login.scss
@@ -98,3 +98,12 @@
   border-width: 2px;
   width: 38%;
 }
+
+.buttonModalLogin{
+  background-color: Transparent;
+  background-repeat:no-repeat;
+  border: none;
+  cursor:pointer;
+  overflow: hidden;
+  outline:none;
+}
