Reset password initial commit

--- a/src/style/sass/pages/_requestResetPassword.scss
+++ b/src/style/sass/pages/_requestResetPassword.scss
@@ -3,10 +3,19 @@
     padding-left: 20%;
     padding-right: 20%;
     background-color: var(--color-grey-5);
-  
+    &__box{
+      border:2px solid yellow;
+      border-radius: 7px;
+      display: flex;
+
+    }
     &__text{
       text-align: center;
-      color: var(--color-yellow-1);
+    }
+    &__input{
+      border:1px solid yellow;
+      &:focus{
+        border:1px solid yellow;
+      }
     }
   }
-  
