--- a/src/style/sass/pages/_requestResetPassword.scss
+++ b/src/style/sass/pages/_requestResetPassword.scss
@@ -2,20 +2,28 @@
     padding: 10%;
     padding-left: 20%;
     padding-right: 20%;
-    background-color: var(--color-grey-5);
+    // display: flex;
+    // justify-content: center;
+    // flex: 10;
+    // background-color: var(--color-grey-5);
     &__box{
-      border:2px solid yellow;
+      border:2px solid #999999;
       border-radius: 7px;
-      display: flex;
-
+      // flex: 7;
+      // flex-direction: column;
+      // justify-content: space-between;
     }
     &__text{
       text-align: center;
+      color: black;
+    }
+    a:hover {
+      color: #FFCD05;
     }
     &__input{
-      border:1px solid yellow;
+      border:1px solid #FFCD05;
       &:focus{
-        border:1px solid yellow;
+        border:1px solid #FFCD05;
       }
     }
   }
