Forgot password page done

--- a/src/style/sass/pages/_requestResetPassword.scss
+++ b/src/style/sass/pages/_requestResetPassword.scss
@@ -6,30 +6,28 @@
     display: flex;
     justify-content: center;
     flex-direction: column;
-    // flex: 10;
-    // background-color: var(--color-grey-5);
     &__box{
       border:2px solid #999999;
       border-radius: 7px;
-      // flex: 10;
-      // flex-direction: column;
       justify-content: space-between;
     }
     &__text{
       text-align: center;
       color: black;
       padding: 20px;
-      // flex: 3;
     }
     a:hover {
       color: #FFCD05;
     }
     &__input{
       border:1px solid #FFCD05;
-      margin-left: 10px;
-      margin-right: 10px;
+      width: 90%;
       &:focus{
         border:1px solid #FFCD05;
       }
+    }
+    .form-group{
+      display: flex;
+      justify-content: center;
     }
   }
