Working on new password screen

--- a/src/style/sass/pages/_resetPassword.scss
+++ b/src/style/sass/pages/_resetPassword.scss
@@ -10,6 +10,7 @@
     border:2px solid #999999;
     border-radius: 7px;
     justify-content: space-between;
+    width: 80%;
   }
   &__text{
     text-align: center;
@@ -24,9 +25,18 @@
       border:1px solid #FFCD05;
     }
   }
+  &__button{
+    width: 90%;
+    background-color: #FFCD05;
+    color: black;
+  }
   .form-group{
     display: flex;
     justify-content: center;
+    flex-wrap: wrap;
     padding-top: 20px;
+  }
+  .label{
+    justify-content: flex-start;
   }
 }
