delete button otp in signup

--- a/src/style/sass/components/_modal.scss
+++ b/src/style/sass/components/_modal.scss
@@ -182,6 +182,11 @@
       // &:focus{
       //   color: blue;
       // }
+      background-color: lightgrey;
+      color: black;
+      border: 2px;
+      border-style: solid;
+      border-color: lightslategrey;
     }
   }
 }
