--- a/src/style/sass/main.scss
+++ b/src/style/sass/main.scss
@@ -22,6 +22,7 @@
 @import "pages/resetPassword";
 @import "pages/invoice";
 @import "pages/layanan";
+@import "pages/dompet";
 
 // reuseable components
 @import "reusable/base";
