--- a/src/style/sass/pages/_insertphone.scss
+++ b/src/style/sass/pages/_insertphone.scss
@@ -2,10 +2,12 @@
   padding: 10%;
   padding-left: 20%;
   padding-right: 20%;
-  background-color: var(--color-grey-5);
+  background-color: white;
 
   &__text{
     text-align: center;
-    color: var(--color-yellow-1);
+    color: black;
+    font-size: 35px;
   }
+  
 }
