--- a/src/style/sass/pages/_insertphone.scss
+++ b/src/style/sass/pages/_insertphone.scss
@@ -9,5 +9,14 @@
     color: black;
     font-size: 35px;
   }
-  
+
+  &__textHead{
+    display: flex;
+    justify-content: center;
+
+    &__font{
+      font-size: 30px;
+    }
+  }
+
 }
