--- a/src/style/sass/pages/_emailVerification.scss
+++ b/src/style/sass/pages/_emailVerification.scss
@@ -2,11 +2,11 @@
     padding: 10%;
     padding-left: 20%;
     padding-right: 20%;
-    background-color: var(--color-grey-5);
+    background-color: white;
   
     &__text{
       text-align: center;
-      color: var(--color-yellow-1);
+      color: black;
       padding: 0%;
     }
   }
