--- a/src/style/sass/pages/_phone.scss
+++ b/src/style/sass/pages/_phone.scss
@@ -38,7 +38,7 @@
     &__button{
         width: 100%;
         display: flex;
-        justify-content: center;
+        justify-content: space-evenly;
         margin: 2.5%;
     }
 
