--- a/src/style/sass/pages/_user.scss
+++ b/src/style/sass/pages/_user.scss
@@ -7,7 +7,7 @@
     padding: 5%;
     padding-top: 0%;
     font-size: 30px;
-    width: 90%;
+    width: 70%;
   }
   &__info{
     &__container{
@@ -27,7 +27,7 @@
     display: flex;
     align-items: center;
     &__container{
-      width: 80%;
+      width: 100%;
     }
     &__logo{
       width: 5%;
@@ -43,6 +43,21 @@
       display: flex;
       width: 100%;
       justify-content: space-between;
+    }
+    &__button{
+      cursor: pointer;
+      font-size: 15px;
+      background-color: white;
+      border: 2px solid #FFCD05;
+      border-radius: 5px;
+      &__add{
+        width: 30%;
+        cursor: pointer;
+        font-size: 15px;
+        background-color: white;
+        border: 2px solid #FFCD05;
+        border-radius: 5px;
+      }
     }
   }
 
@@ -66,7 +81,6 @@
       }
 
       &__phoneWidth{
-        width: 100%
       }
     }
 
@@ -101,13 +115,24 @@
     &__2{
       width: 33.3%;
       &__button2{
-          width: 100%;
+        cursor: pointer;
+        width: 100%;
+        font-size: 15px;
+        background-color: white;
+        border: 2px solid #FFCD05;
+        border-radius: 5px;
+          
       }
     }
     &__3{
       width: 33.3%;
       &__button3{
-          width: 100%;
+        cursor: pointer;
+        width: 100%;
+        font-size: 15px;
+        background-color: white;
+        border: 2px solid #FFCD05;
+        border-radius: 5px;
       }
     }
   }
@@ -156,7 +181,12 @@
     text-align: center;
 
     &__button1{
-        // width: 45%;
+      cursor: pointer;
+      width: 30%;
+      font-size: 15px;
+      background-color: white;
+      border: 2px solid #FFCD05;
+      border-radius: 5px;
     }
 
     &__button2{
@@ -183,8 +213,11 @@
       font-size: 25px;
     }
     &__show{
-      font-size: 17px;
+      font-size: 14px;
       padding-bottom: 1%;
+      // &__email{
+      //   font-size: 14px;
+      // }
       &__container{
         width: 100%;
       }
@@ -197,6 +230,9 @@
         &__user{
           width: 30%;
         }
+      }
+      &__button{
+        font-size: 12px;
       }
     }
     &__phone{
@@ -223,6 +259,45 @@
           font-size: 15px;
 
         }
+      }
+    }
+  }
+}
+
+@media (min-width: 769px) and (max-width:900px) {
+
+  .user{
+    &__container{
+      text-align: center;
+      width: 95%;
+      margin-bottom: 10%;
+    }
+    &__info{
+      &__container{
+        display: block;
+      }
+    }
+    &__title{
+      font-size: 25px;
+    }
+    &__show{
+      font-size: 20px;
+      padding-bottom: 1%;
+      &__container{
+        width: 100%;
+      }
+      &__logo{
+        width: 6%;
+        &__verified{
+          width: 70%;
+          margin-left: 10%;
+        }
+        &__user{
+          width: 30%;
+        }
+      }
+      &__button{
+        font-size: 20px;
       }
     }
   }
