--- a/src/style/sass/pages/_layanan.scss
+++ b/src/style/sass/pages/_layanan.scss
@@ -39,7 +39,7 @@
     color: var(--color-dark-3);
     font-weight: bold;
     line-height: 21px;
-    font-family: Raleway;
+    font-family: Helvetica;
 
   }
 }
