--- a/src/style/css/style.prefix.css
+++ b/src/style/css/style.prefix.css
@@ -30,7 +30,7 @@
           -ms-flex-align: center;
               align-items: center;
       color: var(--color-yellow-1);
-      font-family: Raleway;
+      font-family: Helvetica;
       font-size: 18px;
       font-weight: bold;
       line-height: 21px; }
@@ -41,7 +41,7 @@
         font-size: 18px;
         font-weight: bold;
         line-height: 21px;
-        font-family: Raleway;
+        font-family: Helvetica;
         border-radius: 4px; }
         .footerz__Top__Left__button:active {
           background-color: var(--color-yellow-1) !important;
@@ -70,7 +70,7 @@
             -ms-flex-direction: row;
                 flex-direction: row; }
       .footerz__Top__Right__Row1 {
-        font-family: Raleway;
+        font-family: Helvetica;
         font-size: 18px;
         font-weight: bold;
         line-height: 21px;
@@ -82,7 +82,7 @@
           font-weight: 300;
           line-height: 21px; }
       .footerz__Top__Right__Row2 {
-        font-family: Raleway;
+        font-family: Helvetica;
         font-size: 18px;
         font-weight: bold;
         line-height: 21px;
@@ -94,7 +94,7 @@
           font-weight: 300;
           line-height: 21px; }
       .footerz__Top__Right__Row3 {
-        font-family: Raleway;
+        font-family: Helvetica;
         font-size: 18px;
         font-weight: bold;
         line-height: 21px;
@@ -133,13 +133,13 @@
     background-color: var(--color-yellow-1); }
     .footerz__Bot__labelTop {
       color: #3E3E3E;
-      font-family: Raleway;
+      font-family: Helvetica;
       font-size: 14px;
       font-weight: 600;
       line-height: 16px; }
     .footerz__Bot__labelBot {
       color: #3E3E3E;
-      font-family: Raleway;
+      font-family: Helvetica;
       font-size: 14px;
       font-weight: 800;
       line-height: 16px; }
@@ -254,7 +254,7 @@ ul {
   background-color: #3E3E3E;
   /* -webkit-box-shadow: inset 0 1px 3px 0 rgba(0, 0, 0, 0.5);
              box-shadow: inset 0 1px 3px 0 rgba(0, 0, 0, 0.5); */
-  font-family: Raleway;
+  font-family: Helvetica;
   font-size: 22px;
   font-weight: 600;
   line-height: 20px;
@@ -316,7 +316,7 @@ ul {
             align-items: center;
     background-color: var(--color-yellow-1);
     color: var(--color-grey-5);
-    font-family: Raleway;
+    font-family: Helvetica;
     font-size: 22px;
     font-weight: 600;
     line-height: 11px;
@@ -389,14 +389,14 @@ ul {
   text-align: center;
   padding: 2rem; }
   .Signup__Title {
-    font-family: Raleway;
+    font-family: Helvetica;
     font-size: 14px;
     font-weight: 500;
     line-height: 16px;
     text-align: center;
     padding: 1rem; }
   .Signup__Title2 {
-    font-family: Raleway;
+    font-family: Helvetica;
     font-size: 20px;
     font-weight: 900;
     line-height: 24px;
@@ -409,7 +409,7 @@ ul {
     border-color: var(--color-yellow-1);
     width: 100px;
     height: 25px;
-    font-family: Raleway;
+    font-family: Helvetica;
     font-size: 14px;
     font-weight: bold;
     line-height: 16px;
@@ -431,7 +431,7 @@ ul {
   text-align: center;
   padding: 5%; }
   .Login__Title1 {
-    font-family: Raleway;
+    font-family: Helvetica;
     font-size: 14px;
     font-weight: 500;
     line-height: 16px;
@@ -439,7 +439,7 @@ ul {
     padding: 1rem;
     margin-bottom: 2rem; }
   .Login__Title2 {
-    font-family: Raleway;
+    font-family: Helvetica;
     font-size: 20px;
     font-weight: 900;
     line-height: 24px;
@@ -455,7 +455,7 @@ ul {
     border-color: var(--color-yellow-1);
     width: 100px;
     height: 25px;
-    font-family: Raleway;
+    font-family: Helvetica;
     font-size: 14px;
     font-weight: bold;
     line-height: 16px;
@@ -532,7 +532,7 @@ ul {
       width: 100%;
       text-align: center;
       color: #FFCD05;
-      font-family: Raleway;
+      font-family: Helvetica;
       font-size: 26px;
       font-weight: 600;
       line-height: 30px; }
@@ -557,13 +557,13 @@ ul {
         width: 50%; }
     .bidding__2__col2__pulsa {
       color: #FFFFFF;
-      font-family: Raleway;
+      font-family: Helvetica;
       font-size: 22px;
       font-weight: 600;
       line-height: 26px; }
     .bidding__2__col2__coret {
       color: #FFFFFF;
-      font-family: Raleway;
+      font-family: Helvetica;
       font-size: 22px;
       font-weight: 900;
       line-height: 26px;
@@ -571,19 +571,19 @@ ul {
       text-align: center; }
     .bidding__2__col2__newPrice {
       color: #FFCD05;
-      font-family: Raleway;
+      font-family: Helvetica;
       font-size: 42px;
       font-weight: 900;
       line-height: 49px; }
     .bidding__2__col2__live {
       color: #FFCD05;
-      font-family: Raleway;
+      font-family: Helvetica;
       font-size: 20px;
       font-weight: 900;
       line-height: 24px; }
     .bidding__2__col2__text {
       color: #FFFFFF;
-      font-family: Raleway;
+      font-family: Helvetica;
       font-size: 14px;
       font-weight: 600;
       line-height: 16px; }
@@ -613,7 +613,7 @@ ul {
       text-align: center; }
       .bidding__3__col__text {
         color: #FFFFFF;
-        font-family: Raleway;
+        font-family: Helvetica;
         font-size: 36px;
         font-weight: 800;
         line-height: 42px; }
@@ -654,7 +654,7 @@ ul {
       border-radius: 8px;
       background-color: var(--color-yellow-1);
       color: #3E3E3E;
-      font-family: Raleway;
+      font-family: Helvetica;
       font-size: 30px;
       font-weight: bold;
       line-height: 35px; }
@@ -688,7 +688,7 @@ ul {
       border: none;
       background-color: var(--color-grey-5);
       color: #FFFFFF;
-      font-family: Raleway;
+      font-family: Helvetica;
       font-size: 18px;
       font-weight: bold;
       line-height: 21px; }
@@ -730,7 +730,7 @@ ul {
 .TabsHome {
   width: 25%;
   margin: 0;
-  font-family: Raleway;
+  font-family: Helvetica;
   font-weight: 900;
   letter-spacing: 1px;
   line-height: 11px;
@@ -756,7 +756,7 @@ ul {
   .TabsPane1__text {
     text-align: center; }
   .TabsPane1__label {
-    font-family: Raleway;
+    font-family: Helvetica;
     font-size: 36px;
     font-weight: 800;
     letter-spacing: 1px;
@@ -781,7 +781,7 @@ ul {
     background-color: var(--color-grey-5);
     width: 100%;
     padding: 20px;
-    font-family: Raleway;
+    font-family: Helvetica;
     font-size: 24px;
     font-weight: 800;
     letter-spacing: 1px;
@@ -970,7 +970,7 @@ ul {
     background-color: var(--color-grey-5); }
   .game__slotLabel {
     text-align: center;
-    font-family: raleway; }
+    font-family: Helvetica; }
     .game__slotLabel__h1 {
       color: #FFCD05;
       font-size: 48px;
@@ -993,7 +993,7 @@ ul {
     .game__convert__label {
       margin: 10px;
       color: #FFFFFF;
-      font-family: Raleway;
+      font-family: Helvetica;
       font-size: 24px;
       font-weight: bold;
       line-height: 29px; }
@@ -1001,7 +1001,7 @@ ul {
       border-radius: 5px;
       margin-right: 10px;
       height: 30px;
-      font-family: Raleway;
+      font-family: Helvetica;
       line-height: 29px;
       font-size: 21px;
       padding-left: 10px; }
@@ -1009,7 +1009,7 @@ ul {
       margin-top: 10px;
       margin-bottom: 10px;
       color: #FFFFFF;
-      font-family: Raleway;
+      font-family: Helvetica;
       font-size: 15px;
       font-weight: 900;
       letter-spacing: 3px;
@@ -1033,7 +1033,7 @@ ul {
     .game__slotCoin__label {
       margin: 10px;
       color: #FFFFFF;
-      font-family: Raleway;
+      font-family: Helvetica;
       font-size: 24px;
       font-weight: bold;
       line-height: 29px; }
@@ -1074,7 +1074,7 @@ ul {
       margin-top: 10px;
       margin-bottom: 10px;
       color: #FFFFFF;
-      font-family: Raleway;
+      font-family: Helvetica;
       font-size: 25px;
       font-weight: 900;
       letter-spacing: 3px;
@@ -1104,7 +1104,7 @@ ul {
     margin-top: 10px;
     margin-bottom: 20px;
     text-align: center;
-    font-family: raleway;
+    font-family: Helvetica;
     color: white;
     font-size: 14px;
     font-weight: 500;
@@ -1519,19 +1519,19 @@ body {
   background-color: #FFCD05;
   border-radius: 10px;
   min-width: 205px;
-  font-family: Raleway; }
+  font-family: Helvetica; }
 
 .DropdownUser__inside {
   color: #3E3E3E !important;
   background-color: #FFCD05;
   height: 50px;
-  font-family: Raleway;
+  font-family: Helvetica;
   font-size: 22px;
   font-weight: 600; }
   .DropdownUser__inside:hover {
     background-color: #FFCD05; }
   .DropdownUser__inside__link {
-    font-family: Raleway;
+    font-family: Helvetica;
     font-size: 22px;
     font-weight: 600;
     color: #3E3E3E; }
@@ -1573,7 +1573,7 @@ body {
   border: transparent;
   border-bottom: 2px solid var(--color-yellow-1);
   background: transparent;
-  font-family: Raleway;
+  font-family: Helvetica;
   font-style: italic;
   color: var(--color-yellow-1);
   -webkit-box-shadow: none;
@@ -1582,7 +1582,7 @@ body {
     border: transparent;
     border-bottom: 2px solid var(--color-yellow-1);
     background: transparent;
-    font-family: Raleway;
+    font-family: Helvetica;
     font-style: italic;
     color: var(--color-yellow-1);
     -webkit-box-shadow: var(--color-grey-5);
@@ -1591,34 +1591,34 @@ body {
     border: transparent;
     border-bottom: 2px solid var(--color-yellow-1);
     background: transparent;
-    font-family: Raleway;
+    font-family: Helvetica;
     font-style: italic;
     color: var(--color-yellow-1); }
   .inputz::-webkit-input-placeholder {
     background: transparent;
-    font-family: Raleway;
+    font-family: Helvetica;
     font-style: italic;
     color: var(--color-yellow-1); }
   .inputz:-ms-input-placeholder {
     background: transparent;
-    font-family: Raleway;
+    font-family: Helvetica;
     font-style: italic;
     color: var(--color-yellow-1); }
   .inputz::-ms-input-placeholder {
     background: transparent;
-    font-family: Raleway;
+    font-family: Helvetica;
     font-style: italic;
     color: var(--color-yellow-1); }
   .inputz::placeholder {
     background: transparent;
-    font-family: Raleway;
+    font-family: Helvetica;
     font-style: italic;
     color: var(--color-yellow-1); }
   .inputz:active {
     border: transparent;
     border-bottom: 2px solid var(--color-yellow-1);
     background: transparent;
-    font-family: Raleway;
+    font-family: Helvetica;
     font-style: italic;
     color: var(--color-yellow-1); }
 
