--- a/src/style/sass/components/_footer.scss
+++ b/src/style/sass/components/_footer.scss
@@ -17,7 +17,7 @@
       align-items: center;
 
       color: var(--color-yellow-1);
-      font-family: Raleway;
+      font-family: Helvetica;
       font-size: 18px;
       font-weight: bold;
       line-height: 21px;
@@ -29,7 +29,7 @@
         font-size: 18px;
         font-weight: bold;
         line-height: 21px;
-        font-family: Raleway;
+        font-family: Helvetica;
         border-radius: 4px;
 
         &:active{
@@ -59,7 +59,7 @@
       }
 
       &__Row1{
-        font-family: Raleway;
+        font-family: Helvetica;
         font-size: 18px;
         font-weight: bold;
         line-height: 21px;
@@ -82,7 +82,7 @@
       }
 
       &__Row2{
-        font-family: Raleway;
+        font-family: Helvetica;
         font-size: 18px;
         font-weight: bold;
         line-height: 21px;
@@ -100,7 +100,7 @@
       }
 
       &__Row3{
-        font-family: Raleway;
+        font-family: Helvetica;
         font-size: 18px;
         font-weight: bold;
         line-height: 21px;
@@ -147,14 +147,14 @@
     width: 100%;
     &__labelTop{
       color: #3E3E3E;
-      font-family: Raleway;
+      font-family: Helvetica;
       font-size: 14px;
       font-weight: 600;
       line-height: 16px;
     }
     &__labelBot{
       color: #3E3E3E;
-      font-family: Raleway;
+      font-family: Helvetica;
       font-size: 14px;
       font-weight: 800;
       line-height: 16px;
