--- a/src/style/sass/components/_header.scss
+++ b/src/style/sass/components/_header.scss
@@ -1,7 +1,7 @@
 //Header
 .HeaderTop {
     background-color: white;
-    border-bottom: 4px solid white;
+    border-bottom: 4px solid #FFCD06;
 
     &__Right{
       display: flex;
@@ -92,7 +92,7 @@
   color: black;
   background-color: white;
   box-shadow: inset 0 1px 3px 0 rgba(0,0,0,0.5);
-  font-family: Raleway;
+  font-family: Helvetica;
   font-size: 22px;
   font-weight: 600;
   line-height: 20px;
@@ -139,16 +139,16 @@
   padding: 0;
   border-radius: 10px;
   background-color: white;
-  border-color: yellow;
+  border-color: #FFCD06;
   border-style: solid;
   border-width: 3px;
   &:active{
     background-color: white !important;
-    border-color: yellow;
+    border-color: #FFCD06;
   }
   &:hover{
     background-color: white;
-    border-color: yellow;
+    border-color: #FFCD06;
   }
   // &:focus{
   //   box-shadow: transparent !important;
@@ -173,7 +173,7 @@
     align-items: center;
     background-color: white;
     color: var(--color-grey-5);
-    font-family: Raleway;
+    font-family: Helvetica;
     font-size: 22px;
     font-weight: 600;
     line-height: 11px;
