--- a/src/style/sass/pages/_bidding.scss
+++ b/src/style/sass/pages/_bidding.scss
@@ -25,7 +25,7 @@
       width: 100%;
       text-align: center;
       color: #FFCD05;
-      font-family: Raleway;
+      font-family: Helvetica;
       font-size: 26px;
       font-weight: 600;
       line-height: 30px;
@@ -43,7 +43,7 @@
       display: flex;
       justify-content: center;
       align-items: center;
-      background-color: yellow;
+      background-color: #FFCD06;
       padding-top: 15px;
       padding-bottom: 15px;
 
@@ -64,7 +64,7 @@
 
       &__pulsa{
         color: #FFFFFF;
-        font-family: Raleway;
+        font-family: Helvetica;
         font-size: 22px;
         font-weight: 600;
         line-height: 26px;
@@ -72,7 +72,7 @@
 
       &__coret{
         color: #FFFFFF;
-        font-family: Raleway;
+        font-family: Helvetica;
         font-size: 22px;
         font-weight: 900;
         line-height: 26px;
@@ -82,7 +82,7 @@
 
       &__newPrice{
       	color: #FFCD05;
-      	font-family: Raleway;
+      	font-family: Helvetica;
       	font-size: 80px;
       	font-weight: 900;
 
@@ -90,7 +90,7 @@
 
       &__live{
         color: #FFCD05;
-        font-family: Raleway;
+        font-family: Helvetica;
         font-size: 20px;
         font-weight: 900;
         line-height: 24px;
@@ -98,7 +98,7 @@
 
       &__text {
       	color: black;
-      	font-family: Raleway;
+      	font-family: Helvetica;
       	font-size: 14px;
       	font-weight: 600;
       	line-height: 16px;
@@ -127,7 +127,7 @@
 
       &__text{
       	color: #FFCD05;
-      	font-family: Raleway;
+      	font-family: Helvetica;
       	font-size: 36px;
       	font-weight: 800;
       	line-height: 42px;
@@ -173,11 +173,11 @@
 
       width: 80%;
       height: 75px;
-      border-radius: 8px;
+      border-radius: 50px;
 
-      background-color: var(--color-yellow-1);
+      background-color: #FFCD06;
     	color: #3E3E3E;
-    	font-family: Raleway;
+    	font-family: Helvetica;
     	font-size: 30px;
     	font-weight: bold;
     	line-height: 35px;
@@ -200,11 +200,10 @@
 
       width: 80%;
       height: 75px;
-      border-radius: 8px;
-
-      background-color: #85e0e0;
+      border-radius: 50px;
+      background-color: #989898;
       color: #3E3E3E;
-      font-family: Raleway;
+      font-family: Helvetica;
       font-size: 30px;
       font-weight: bold;
 
@@ -233,7 +232,7 @@
 @media (max-width:450px) {
   .bidding__2__col2__newPrice {
     color: #FFCD05;
-    font-family: Raleway;
+    font-family: Helvetica;
     font-size: 60px;
     font-weight: 900;
   }
