--- a/src/style/sass/pages/_invoice.scss
+++ b/src/style/sass/pages/_invoice.scss
@@ -14,6 +14,15 @@
     width: 50%;
     font-size: 25px;
     text-align: center;
+    &:active{
+      background-color: #FFCD06
+    }
+    &:visited{
+      background-color: #FFCD06
+    }
+    &:focus{
+      background-color: #FFCD06
+    }
   }
 }
 
@@ -31,5 +40,10 @@ td{
       overflow: scroll;
     }
   }
-  
+
+}
+
+.nav-tabs .nav-link.active {
+  background-color: #FFCD05;
+  border-top: none;
 }
