--- a/src/style/sass/reusable/_base.scss
+++ b/src/style/sass/reusable/_base.scss
@@ -3,7 +3,7 @@
 * {
     margin: 0;
     padding: 0;
-    font-family: Raleway;
+    font-family: Helvetica;
 }
 
 *,
@@ -22,7 +22,7 @@ html {
 }
 
 body {
-    font-family: 'Raleway', Raleway;
+    font-family: 'Helvetica', Helvetica;
     font-weight: 400;
     line-height: 1.6;
     color: black;
